# hpc

./: .gitignore  CMakeLists.txt  README.md  generador_datos_por_suburbio.ipynb  generar_distribucion_envio_barrio_a_barrio.ipynb  main.cpp  mis_hosts
aux/: 00-osmnx-features-demo.ipynb
configuraciones/: config.txt  hello.c  logging.ini
datos/: cantidad_calles_por_barrio_montevideo.csv  cantidad_personas_por_barrio_caba.csv  cantidad_personas_por_barrio_montevideo.csv  cantidad_personas_por_barrio_roma.csv  cantidad_personas_por_barrio_vegas.csv  probabilidad_barrios_a_barrios.json
include/: Barrio.h  Calle.h  CargarGrafo.h  Constantes.h  Grafo.h  Nodo.h  Utils.h  Vehiculo.h
pruebas/: a.out  pruebaMpi.c
src/: Barrio.cpp  Calle.cpp  CargarGrafo.cpp  Grafo.cpp  Nodo.cpp  Vehiculo.cpp  main.cpp
